# Computerized_Alcoholism

./: .gitignore  README.md  project_db.db
Beer Pong Robot/: CMakeCache.txt  cmake_install.cmake  db_test.cbp  project_db.db
Beer Pong Robot/.cmake/api/v1/reply/: target-db_test-Debug-7aba2f0109d47b076380.json
Beer Pong Robot/Main/: CMakeLists.txt  FindMYSQL.cmake  calib.cpp  database.cpp  database.h  machinevision.cpp  machinevision.h  main.cpp  projectilemotion.cpp  projectilemotion.h  robotcontroller.cpp  robotcontroller.h
Calibration/: CMakeLists.txt  CMakeLists.txt.user.fcb84e8  calib.cpp  main.cpp
Database/: Makefile  project_db.db
Database/.cmake/api/v1/reply/: cache-v2-dc3d661fc05e35a517b5.json  cmakeFiles-v1-a0c97befaa1c580b5d17.json  codemodel-v2-65e80e3c41eefde80fc0.json  index-2021-12-15T11-21-32-0770.json
Database/build-Database-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  db_test.cbp
Database/build-Database-Debug/.cmake/api/v1/reply/: cache-v2-e75eff5cd33f3d4a15cb.json  cmakeFiles-v1-729035dbabeba3d837db.json  codemodel-v2-a2ffdd8dd6937d286790.json  index-2021-12-15T11-22-44-0024.json
Database/build-db_test-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  db_test  db_test.cbp
Database/build-db_test-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f0b4feef6c4cc0fa2ee9.json  cmakeFiles-v1-04ffaca83f9c643f4a44.json  cmakeFiles-v1-fe24683f1a1e1a89b6be.json  codemodel-v2-08ca9ba1c351c139187a.json  codemodel-v2-79d426b93220d06b74bf.json  index-2021-11-15T10-45-52-0796.json  index-2021-11-16T08-24-04-0570.json  index-2021-11-25T08-19-07-0325.json  target-db_test-Debug-2dd03fcb3f8a42cd2edb.json  target-db_test-Debug-daeda80a625261b29f64.json
Database/db_test/: CMakeLists.txt  CMakeLists.txt.user.7750cc4  CMakeLists.txt.user.a693553  database.cpp  database.h  database.h.autosave  database_func.cpp  database_func.h  machinevision.cpp  machinevision.h  main.cpp  projectilemotion.cpp  robotcontroller.cpp
Kinematics/Controller/: CMakeLists.txt  CMakeLists.txt.user.fcb84e8  calib.cpp  calib.h  machinevision.cpp  machinevision.h  main.cpp  projectilemotion.cpp  projectilemotion.h  robotcontroller.cpp  robotcontroller.h
Kinematics/RobotControl/: CMakeLists.txt  main.cpp
Kinematics/build-Controller-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Controller  Controller.cbp  Makefile  cmake_install.cmake
Kinematics/build-Controller-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-0f4249ea4184eb26abb3.json  cache-v2-389b844a9df98c1b3e89.json  cache-v2-64f8460ac9a0c2635013.json  cache-v2-6ca31542767325606056.json  cache-v2-870dcf0257b2946aceff.json  cache-v2-ae3f4476bf2f4a429ce7.json  cmakeFiles-v1-38d7667ce5f19f865b7e.json  cmakeFiles-v1-6f587e962339b52a10ec.json  cmakeFiles-v1-9ecb170d2e13102014fd.json  cmakeFiles-v1-b214417f75e59f010f2c.json  cmakeFiles-v1-bf0ad1cc7e2cfb80749d.json  cmakeFiles-v1-d91a65782528f07a82f6.json  (+36 more)
Kinematics/build-Controller-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-36dc814ca627de11615f.json  cmakeFiles-v1-a9e96cd4663873e79b69.json  codemodel-v2-ce89ac8bf9015734489b.json
Kinematics/build-RobotControl-Desktop-Debug/: CMakeCache.txt  Makefile  RobotControl  RobotControl.cbp  cmake_install.cmake
Machine Vision/calibration/: main.cpp
MachineVision/: Intrinsic parametre
MachineVision/Calibration/: CMakeLists.txt.user.7750cc4  CMakeLists.txt.user.a693553
MachineVision/build-Calibration-Desktop-Debug/: CMakeCache.txt  Makefile  calibration  calibration.cbp  cmake_install.cmake
MachineVision/build-calibration-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  calibration  calibration.cbp  cmake_install.cmake
MachineVision/build-machineVision-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  machineVision  machineVision.cbp
MachineVision/calibration/: CMakeLists.txt.user.a693553  CMakeLists.txt.user.c53a2a4  main.cpp
MachineVision/etellerandet/: CMakeLists.txt  main.cpp
MachineVision/machineVision/: CMakeLists.txt  CMakeLists.txt.user.a693553  machinevision.cpp  main.cpp
Main/Controller/: CMakeLists.txt  CMakeLists.txt.user.7750cc4  calib.cpp  calib.h  database.cpp  database.h  machinevision.cpp  machinevision.h  main.cpp  projectilemotion.cpp  projectilemotion.h  robotcontroller.cpp  robotcontroller.h
Main/Controller/build-Controller-Desktop-Debug/: CMakeCache.txt  Controller.cbp  Makefile  cmake_install.cmake  project_db.db
Main/Controller/build-Controller-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-895fa2f9664c773b5c90.json  cmakeFiles-v1-3025ea1f6e9d7387d670.json  codemodel-v2-aa706495a021d1fb3942.json  index-2021-12-14T14-18-53-0619.json  target-Controller-Debug-840cfa27ae391e864779.json
Main/build-Controller-Desktop-Debug/: Controller.cbp  cmake_install.cmake
Main/build-Main-Desktop-Debug/: CMakeCache.txt  Main  Main.cbp  Makefile  cmake_install.cmake
(+53 files in other folders)
